# desktop-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml
desktop_parser/: __init__.py  desktop.py
